--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ html,body
 {
     background-color: #f5f5f5;
 }
-@media(max-width:500px;)
+@media(max-width:500px)
 {
     .table thead{
         display:none;
@@ -169,9 +169,9 @@ html,body
         margin-bottom: 15px;
     }
     .table td{
-        text-align: right;
+        text-align: center;
         padding-left: 50%;
-        text-align: right;
+        text-align: center;
         position: relative;
     }
     .table td::before{
